--- a/4_project_repo/project_4/ticTacToe_main_summary.html
+++ b/4_project_repo/project_4/ticTacToe_main_summary.html
@@ -11,7 +11,7 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>gameManager</TD>
+<TD>ticTacToe_main</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>Synthesized</TD>
 </TR>
@@ -19,12 +19,13 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/*.xmsgs?&DataKey=Warning'>22 Warnings (11 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -42,7 +43,7 @@
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/gameManager_envsettings.html'>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/ticTacToe_main_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -57,24 +58,24 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>107</TD>
-<TD ALIGN=RIGHT>54576</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>18224</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>187</TD>
-<TD ALIGN=RIGHT>27288</TD>
+<TD ALIGN=RIGHT>53</TD>
+<TD ALIGN=RIGHT>9112</TD>
 <TD ALIGN=RIGHT COLSPAN='2'>0%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>96</TD>
-<TD ALIGN=RIGHT>198</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>48%</TD>
+<TD ALIGN=RIGHT>23</TD>
+<TD ALIGN=RIGHT>53</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>43%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>31</TD>
-<TD ALIGN=RIGHT>296</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>10%</TD>
+<TD ALIGN=RIGHT>4</TD>
+<TD ALIGN=RIGHT>232</TD>
+<TD ALIGN=RIGHT COLSPAN='2'>1%</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFG/BUFGCTRLs</TD>
 <TD ALIGN=RIGHT>2</TD>
@@ -93,11 +94,10 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/gameManager.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Mar 5 07:22:05 2019</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/ticTacToe_main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Mar 6 05:13:46 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Warning'>22 Warnings (11 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD>CPLD Fitter Report (Text)</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Post-PAR Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Bitgen Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
