--- a/4_project_repo/sample_vga/NERP_demo_top_summary.html
+++ b/4_project_repo/sample_vga/NERP_demo_top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>NERP_demo_top Project Status (03/05/2019 - 14:00:52)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>NERP_demo_top Project Status (03/05/2019 - 12:30:12)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>sample_vga.xise</TD>
@@ -19,36 +19,35 @@
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc6slx16-3csg324</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.6</TD>
+<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/*.xmsgs?&DataKey=Warning'>18 Warnings (4 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top_envsettings.html'>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -203,7 +202,7 @@ System Settings</A>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>11</TD>
 <TD ALIGN=RIGHT>232</TD>
 <TD ALIGN=RIGHT>4%</TD>
@@ -387,18 +386,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -409,21 +408,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:05 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/xst.xmsgs?&DataKey=Warning'>16 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (1 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:12 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:21 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:31 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:06 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/_xmsgs/xst.xmsgs?&DataKey=Warning'>16 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/_xmsgs/xst.xmsgs?&DataKey=Info'>2 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:14 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:22 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:32 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:37 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\NERP_demo_top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Tue Mar 5 14:00:48 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:38 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/NERP_demo_top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Tue Mar 5 22:00:50 2019</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Mar 5 14:00:49 2019</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/152/Desktop/lab6_group11/UCLA_CSM152A_src/4_project_repo/sample_vga\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Mar 5 14:00:52 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Mar 5 22:00:50 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/sample_vga/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Mar 5 22:00:54 2019</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/05/2019 - 14:00:52</center>
+<br><center><b>Date Generated:</b> 03/06/2019 - 04:16:23</center>
 </BODY></HTML>
