--- a/4_project_repo/project_4/ticTacToe_main_summary.html
+++ b/4_project_repo/project_4/ticTacToe_main_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>gameManager Project Status (03/06/2019 - 05:13:47)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>ticTacToe_main Project Status (03/08/2019 - 23:12:29)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>project_4.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/*.xmsgs?&DataKey=Warning'>22 Warnings (11 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/*.xmsgs?&DataKey=Warning'>20 Warnings (20 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -94,7 +94,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/ticTacToe_main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Mar 6 05:13:46 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Warning'>22 Warnings (11 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/ticTacToe_main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri Mar 8 23:12:29 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Warning'>20 Warnings (20 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/ise/Xilinx_host/UCLA_CSM152A_src_repo/4_project_repo/project_4/_xmsgs/xst.xmsgs?&DataKey=Info'>8 Infos (8 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -108,5 +108,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/06/2019 - 05:13:47</center>
+<br><center><b>Date Generated:</b> 03/08/2019 - 23:12:30</center>
 </BODY></HTML>
